2005-07-16  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* regress/runtest: fix typo in comment. Do not require args line.
	* regress/fread.c, regress/name_locate.c, regress/open.c,
	regress/fread.test, regress/name_locate.test, regress/open.test,
	regress/Makefile.am: convert remaining tests to new testing
	framework.

2005-07-15  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* regress/Makefile.am: convert for new-style test cases
	* regress/add_from_file.c: add, based on add_from_buffer.c
	* regress/add_from_buffer.c: add, based on buffadd.c.
	* regress/buffadd.c: removed.
	* regress/runtest: add, based on ckmame's

2005-07-14  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* compile, depcomp, install-sh, missing, mkinstalldirs: update
	from automake-1.9.6.

	* configure.ac: bump version to 0.6.1

	* lib/zip_fread.c (zip_fread): remove unsigned.

2005-07-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip.h: make usable from C++. Patch from Heiko Hund.

2005-07-05  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* libzip.pc.in (zipcmp): Fix path to zipcmp.

2005-06-18  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* lib/zip_close.c, lib/zip_dirent.c, lib/zip_fread.c,
	lib/zipint.h, src/zipcmp.c: fix some warnings with -Wsign-compare.

	* configure.ac, man/Makefile.am: smarter man page installation
	handling, avoiding symlinks.

2005-06-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* libzip.pc: return full path to zipcmp.

2005-06-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.ac: bump version to 0.6

2005-06-09  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* regress/buffadd.c (main): check string length before comparing.
	* ltmain.sh: update from libtool-1.5.18.
	* compile, depcomp, install-sh, missing, mkinstalldirs: Update
	from automake-1.9.5.

2005-06-09  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* lib/zip_source_zip.c (zip_source_zip): if reading uncompressed,
	set crc in stat buffer to 0.
